--- a/html/index.html
+++ b/html/index.html
@@ -8,19 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- TITLE -->
     <title>Document</title>
-    <!-- BOOTSTRAP -->
+    <!-- LINK CSS/BOOTSTRAP -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
       crossorigin="anonymous"
     />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-      crossorigin="anonymous"
-    ></script>
-    <!-- LINK CSS -->
     <link rel="stylesheet" href="../assets/css/style.css" />
     <!-- FONT -->
     <!-- ICONA -->
@@ -31,10 +25,56 @@
     <!-- HEADER -->
     <header></header>
     <!-- MAIN -->
-    <main></main>
+    <main>
+      <h1 class="text-center text-primary mt-5">BOOTSTRAP TEST</h1>
+      <div class="container mt-5">
+        <h2 class="text-center">
+          A animated progress bar created with Bootstrap and JavaScript, try to
+          fill at 100% the bar with the button below:
+        </h2>
+        <div class="progress mt-5">
+          <div
+            class="progress-bar progress-bar-striped active"
+            role="progressbar"
+            aria-valuenow="0"
+            aria-valuemin="0"
+            aria-valuemax="100"
+            style="width: 0%"
+          >
+            0%
+          </div>
+        </div>
+      </div>
+      <button
+        type="button"
+        class="btn btn-primary btn-lg btn-block mx-auto d-block mt-5"
+      >
+        Press me to fill the bar!
+      </button>
+    </main>
     <!-- FOOTER -->
-    <footer></footer>
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div
+            class="col-6 bg-primary text-white text-center mx-auto d-block fixed-bottom rounded-top"
+          >
+            <a
+              href="https://www.linkedin.com/in/valerio-di-felice-0000000000/"
+              class="d-flex align-items-center justify-content-center"
+            >
+              Realizzato da Valerio Di Felice 28/06/2025
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
-  <!-- LINK JS -->
+  <!-- LINK JS/BOOTSTRAP -->
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+    crossorigin="anonymous"
+  ></script>
   <script src="../script/script.js"></script>
 </html>
