--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- TITLE -->
-    <title>Document</title>
+    <title>Bootstrap Test</title>
     <!-- LINK CSS/BOOTSTRAP -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="../assets/css/style.css" />
     <!-- FONT -->
     <!-- ICONA -->
-    <link rel="icon" type="image/png" href="../assets/img/" />
+    <link rel="icon" type="image/png" href="../assets/img/bootstrap-logo.png" />
   </head>
   <!-- BODY -->
   <body>
@@ -26,7 +26,9 @@
     <header></header>
     <!-- MAIN -->
     <main>
+      <!-- TITLE -->
       <h1 class="text-center text-primary mt-5">BOOTSTRAP TEST</h1>
+      <!-- ANIMATED PROGRESS BAR -->
       <div class="container mt-5">
         <h2 class="text-center">
           A animated progress bar created with Bootstrap and JavaScript, try to
@@ -45,6 +47,7 @@
           </div>
         </div>
       </div>
+      <!-- BUTTON -->
       <button
         type="button"
         class="btn btn-primary btn-lg btn-block mx-auto d-block mt-5"
@@ -60,8 +63,8 @@
             class="col-6 bg-primary text-white text-center mx-auto d-block fixed-bottom rounded-top"
           >
             <a
-              href="https://www.linkedin.com/in/valerio-di-felice-0000000000/"
-              class="d-flex align-items-center justify-content-center"
+              href="https://github.com/UnluckyRio"
+              class="text-white text-decoration-none d-flex align-items-center justify-content-center"
             >
               Realizzato da Valerio Di Felice 28/06/2025
             </a>
