--- a/html/index.html
+++ b/html/index.html
@@ -31,8 +31,8 @@
       <!-- ANIMATED PROGRESS BAR -->
       <div class="container mt-5">
         <h2 class="text-center">
-          A animated progress bar created with Bootstrap and JavaScript, try to
-          fill at 100% the bar with the button below:
+          An animated progress bar created with Bootstrap and JavaScript, which
+          you can fill to 100% using the button below.
         </h2>
         <div class="progress mt-5">
           <div
@@ -66,7 +66,7 @@
               href="https://github.com/UnluckyRio"
               class="text-white text-decoration-none d-flex align-items-center justify-content-center"
             >
-              Realizzato da Valerio Di Felice 28/06/2025
+              Realizzato by Valerio Di Felice 28/06/2025
             </a>
           </div>
         </div>
